--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Details Proxy</title>
-    <link rel="stylesheet" type="text/css" href="http://localhost:3004/games/1/app.css">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
   </head>
@@ -31,10 +30,10 @@
       <div id="recommended"></div>
       <div id="reviews"></div>
     </div>
-    <script src="https://d2rloq8pbhgl20.cloudfront.net/app.js"></script>
+    <!-- <script src="https://d2rloq8pbhgl20.cloudfront.net/app.js"></script> -->
     <!-- <script src="http://18.221.207.9:3001/games/1/bundle.js"></script>
     <script src="http://3.18.37.38:3003/games/1/bundle.js"></script> -->
-    <script src="http://localhost:3004/games/1/bundle.js"></script>
+    <script src="http://localhost:3001/games/1/bundle.js"></script>
     <!-- <script src="http://3.18.37.38:3005/bundle.js"></script> -->
   </body>
 </html>
