--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,9 @@
       <div id="recommended"></div>
       <div id="reviews"></div>
     </div>
-    <!-- <script src="https://d2rloq8pbhgl20.cloudfront.net/app.js"></script> -->
-    <!-- <script src="http://18.221.207.9:3001/games/1/bundle.js"></script>
-    <script src="http://3.18.37.38:3003/games/1/bundle.js"></script> -->
-    <script src="http://localhost:3001/games/1/bundle.js"></script>
-    <!-- <script src="http://3.18.37.38:3005/bundle.js"></script> -->
+    <script src="http://54.67.69.54:3004/games/1/bundle.js">
+    <script src="http://52.14.177.16:3003/bundle.js"></script>
+    <script src="http://18.220.38.54:3002/games/1/app.js"></script>
+    <script src="http://ec2-13-59-39-155.us-east-2.compute.amazonaws.com:3001/games/1/bundle.js"></script>
   </body>
 </html>
